sema/testdata/gcc-c99-extra/reject/init-empty-3.c
struct s { int a; } x = { };

struct s *p = &(struct s){ };
